# rocksjni-m2

./: CMakeLists.txt  main.cpp  readme.md
lib/: jniapi.cpp  jniapi.h  jnim2mock.cpp  jnim2mock.h  mirrorapi.cpp  mirrorapi.h  rocksapi.cpp  rocksapi.h
